# networking_lab

./: .gitignore  mic_like_signal.txt  prob6.md  signal_pwl.txt  sound_generator.py
ft601/: CMakeLists.txt  README.md
ft601/src/: main.c
ft601_linux/: CMakeLists.txt  README.md
ft601_linux/src/: main.c
ft601_win/: CMakeLists.txt  README.md
ft601_win/scripts/: main.py
ft601_win/src/: main.c  main.cpp
notes/: getting_started.md
